--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Madimi+One&display=swap');
 
 body {
-    background-image: url('https://img.freepik.com/premium-vector/hand-drawn-seamless-pattern-with-cute-yellow-flowers-white-background_646146-9.jpg');
+    background-image: url('https://images.rawpixel.com/image_800/czNmcy1wcml2YXRlL3Jhd3BpeGVsX2ltYWdlcy93ZWJzaXRlX2NvbnRlbnQvbHIvdjExMDItcGF0dGVybi0wNS1hMi1reHF1azU4ai5qcGc.jpg');
     font-family: "Madimi One", sans-serif;
     margin: 0;
     padding: 20px;
@@ -15,15 +15,15 @@ header {
 }
 
 h1 {
-    color: #FFB800;
+    color: #720707;
     background-color: rgba(255, 255, 255, 0.8);
     font-size: 48px;
     text-shadow: 2px 2px #fff;
 }
 
 h2 {
-    color: #FF9900;
-    border-bottom: 2px dashed #FF9900;
+    color: #5f1010;
+    border-bottom: 2px dashed #ec8c8c;
     padding-bottom: 5px;
 }
 
